# fastapi-docker-helloworld

./: .gitignore  README.md  build_docker.sh  pyproject.toml
docker/: DockerFile  run.sh
fastapi_docker_helloworld/: app.py
fastapi_docker_helloworld/routes/: app1.py  app2.py
